infrastructure/cluster/.serverless/cloudformation-template-update-stack.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "The AWS CloudFormation template for this Serverless application",
  "Resources": {
    "ServerlessDeploymentBucket": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256"
              }
            }
          ]
        }
      }
    },
    "ServerlessDeploymentBucketPolicy": {
      "Type": "AWS::S3::BucketPolicy",
      "Properties": {
        "Bucket": {
          "Ref": "ServerlessDeploymentBucket"
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Effect": "Deny",
              "Principal": "*",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "ServerlessDeploymentBucket"
                      },
                      "/*"
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "ServerlessDeploymentBucket"
                      }
                    ]
                  ]
                }
              ],
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": false
                }
              }
            }
          ]
        }
      }
    },
    "ElPatronListUsersRepository": {
      "Type": "AWS::ECR::Repository",
      "Properties": {
        "RepositoryName": "el-patron-list-users"
      }
    },
    "ListUsersEcsCluster": {
      "Type": "AWS::ECS::Cluster"
    },
    "ListUsersSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow http to client host",
        "VpcId": {
          "Fn::ImportValue": "VPC"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 8080,
            "ToPort": 8080,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443,
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "-1",
            "FromPort": 0,
            "ToPort": 0,
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "ListUsersApplicationLoadBalancer": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "IpAddressType": "ipv4",
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Ref": "ListUsersSecurityGroup"
          }
        ],
        "Subnets": [
          {
            "Fn::ImportValue": "PublicSubnet1AZ1"
          },
          {
            "Fn::ImportValue": "PublicSubnet1AZ2"
          }
        ],
        "Type": "application"
      }
    }
  },
  "Outputs": {
    "ServerlessDeploymentBucketName": {
      "Value": {
        "Ref": "ServerlessDeploymentBucket"
      }
    },
    "ListUsersEcsClusterExport": {
      "Description": "A reference to the created ECS Cluster",
      "Value": {
        "Ref": "ListUsersEcsCluster"
      },
      "Export": {
        "Name": "ListUsersEcsCluster"
      }
    },
    "ListUsersSecurityGroupExport": {
      "Description": "A reference to the created SG",
      "Value": {
        "Ref": "ListUsersSecurityGroup"
      },
      "Export": {
        "Name": "ListUsersSecurityGroup"
      }
    },
    "ListUsersApplicationLoadBalancerArnExport": {
      "Description": "A reference to the created ALB",
      "Value": {
        "Ref": "ListUsersApplicationLoadBalancer"
      },
      "Export": {
        "Name": "ListUsersApplicationLoadBalancer"
      }
    }
  }
}
